fixed adddog form field alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,8 @@
 }
 .form-style-3 label > span{
     float: left;
-    width: 100px;
+    min-width: 100px;
+    width: 35%;
     font-weight: bold;
     font-size: 15px;
     text-shadow: 1px 1px 1px #fff;
